--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,5 @@
     <color name="orange_500">#FF5722</color>
     <color name="yellow_900">#F57F17</color>
     <color name="white">#FFFFFF</color>
-    <color name="BlueBlack">#131B45</color>
+    <color name="BlueBlack">#1A255F</color>
 </resources>
