--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="175dp"
     android:layout_height="200dp"
-    android:layout_gravity="center_horizontal"
+    android:layout_gravity="center"
     android:layout_margin="16dp"
     android:clickable="true"
     android:focusable="true"
