Correct click, fake Cocktail Activity, fixed layout, everything Ok

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,4 +21,13 @@
         <item name="colorAccent">@color/pink</item>
         <item name="android:statusBarColor">@color/orange_500</item>
     </style>
+
+    <style name="Theme.AppPrototype1.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.AppPrototype1.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.AppPrototype1.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
