--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -1,30 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="4dp">
-
     <com.google.android.material.card.MaterialCardView
-        android:layout_width="171dp"
-        android:layout_height="195dp"
-        android:layout_gravity="center"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_gravity="center_horizontal"
         android:layout_marginVertical="8dp"
-        android:layout_marginHorizontal="15dp"
-        android:clickable="true"
-        android:focusable="true"
+        android:layout_marginHorizontal="10dp"
         app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="29dp"
-        app:cardElevation="9dp"
+        app:cardElevation="3dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:strokeColor="@color/BlueBlack"
-        app:strokeWidth="3dp">
+        app:strokeWidth="3dp"
+        android:clickable="true"
+        android:focusable="true">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -54,8 +48,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:srcCompat="@drawable/margarita" />
+                app:srcCompat="@drawable/margarita"
+                tools:ignore="ContentDescription" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.google.android.material.card.MaterialCardView>
-</androidx.constraintlayout.widget.ConstraintLayout>
