--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,8 +23,8 @@
     </style>
 
     <style name="Theme.AppPrototype1.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">true</item>
+        <item name="windowNoTitle">false</item>
     </style>
 
     <style name="Theme.AppPrototype1.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
