--- a/app/src/main/res/drawable/bg_gradient.xml
+++ b/app/src/main/res/drawable/bg_gradient.xml
@@ -2,8 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <gradient
-        android:type="linear"
-        android:angle="135"
-        android:startColor="#ff1b49"
-        android:endColor="#e67d20" />
+        android:angle="0"
+        android:startColor="#2E2C97"
+        android:endColor="#DC06DD" />
 </shape>
