Add icon. DB Pizdec

--- a/app/src/main/res/layout/ingredient_item.xml
+++ b/app/src/main/res/layout/ingredient_item.xml
@@ -12,7 +12,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:strokeColor="@color/BlueBlack"
+        app:strokeColor="?android:attr/colorAccent"
         app:strokeWidth="3dp"
         app:cardCornerRadius="19dp"
         android:clickable="true"
@@ -33,6 +33,7 @@
                 android:layout_marginEnd="257dp"
                 android:layout_marginBottom="60dp"
                 android:text="TextView"
+                android:textColor="?android:attr/colorAccent"
                 android:textAlignment="viewStart"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
