--- a/app/src/main/res/layout/activity_cock_sreen.xml
+++ b/app/src/main/res/layout/activity_cock_sreen.xml
@@ -5,6 +5,57 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CockSreen">
+    tools:context=".AddCocktailActivity">
 
-  </androidx.constraintlayout.widget.ConstraintLayout>
+  <Button
+      android:id="@+id/buttonSave"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="8dp"
+      android:text="Save"
+      app:layout_constraintStart_toStartOf="@+id/edIngr"
+      app:layout_constraintTop_toBottomOf="@+id/edIngr"
+      tools:ignore="HardcodedText" />
+
+  <EditText
+      android:id="@+id/edCoct"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:autofillHints=""
+      android:ems="10"
+      android:hint="@string/cocktail"
+
+      android:inputType="textPersonName"
+      android:minHeight="48dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="@+id/edIngr"
+      app:layout_constraintHorizontal_bias="0.0"
+      app:layout_constraintStart_toStartOf="@+id/edIngr"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.332" />
+
+  <EditText
+      android:id="@+id/edIngr"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="4dp"
+      android:autofillHints=""
+      android:ems="10"
+      android:hint="@string/ingredient"
+      android:inputType="textPersonName"
+      android:minHeight="48dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/edCoct" />
+
+  <Button
+      android:id="@+id/buttonNuke"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/nuke"
+      app:layout_constraintEnd_toEndOf="@+id/edIngr"
+      app:layout_constraintHorizontal_bias="0.692"
+      app:layout_constraintStart_toEndOf="@+id/buttonSave"
+      app:layout_constraintTop_toBottomOf="@+id/edIngr" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
