--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -12,7 +12,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:strokeColor="@color/BlueBlack"
+        app:strokeColor="?android:attr/colorAccent"
         app:strokeWidth="3dp"
         app:cardCornerRadius="19dp"
         android:clickable="true"
@@ -58,7 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
-                android:backgroundTint="@color/BlueBlack"
+
                 android:elevation="4dp"
                 android:longClickable="false"
                 app:layout_constraintBottom_toBottomOf="parent"
