--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -8,14 +8,13 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginVertical="4dp"
         android:layout_marginHorizontal="10dp"
-        app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="29dp"
         app:cardElevation="3dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:strokeColor="@color/BlueBlack"
+        app:strokeColor="?android:attr/colorAccent"
         app:strokeWidth="3dp"
         android:clickable="true"
         android:focusable="true">
@@ -33,7 +32,7 @@
                 android:backgroundTintMode="screen"
                 android:text="Long Island Iced Tea"
                 android:textAlignment="center"
-                android:textColor="@color/BlueBlack"
+                android:textColor="?android:attr/colorAccent"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/imageView"
                 app:layout_constraintEnd_toEndOf="parent"
