--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,8 +5,11 @@
         <item name="colorPrimary">@color/BlueBlack</item>
         <item name="colorPrimaryVariant">@color/BlueBlack</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="strokeColor">@color/BlueBlack</item>
+        <item name="colorAccent">@color/BlueBlack</item>
+        <item name="android:windowBackground">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondary">@color/white</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
@@ -21,14 +24,25 @@
         <item name="colorPrimaryDark">@color/orange_900</item>
         <item name="colorAccent">@color/pink</item>
         <item name="android:statusBarColor">@color/orange_500</item>
+        <item name="strokeColor">@color/BlueBlack</item>
     </style>
 
     <style name="Theme.AppPrototype1.NoActionBar">
         <item name="windowActionBar">true</item>
         <item name="windowNoTitle">false</item>
+        <item name="strokeColor">@color/BlueBlack</item>
     </style>
 
     <style name="Theme.AppPrototype1.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.AppPrototype1.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="Theme.App.Starting.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.App.Starting.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.App.Starting.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
