--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -15,6 +15,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:strokeColor="?android:attr/colorAccent"
+        android:background="@color/BlueBlack"
         app:strokeWidth="3dp"
         android:clickable="true"
         android:focusable="true">
